tests/fail/semantics/ownership_move_twice/main.kira
struct Mesh {
    let id: Int
}

function consume(mesh: Mesh) {
    return
}

@Main
function main() {
    var mesh = Mesh { id: 5 }
    consume(move mesh)
    consume(move mesh)
    return
}
